# authy

./: .gitignore  AGENTS.md  AI_AGENT_GUIDE.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  SECURITY.md  install.ps1  install.sh  landing_page.md  milestones.md  research_cli_vault.md  tui_admin.md  tui_todo.md
.github/workflows/: ci.yml  pages.yml  release.yml
bindings/node/: Cargo.toml  index.d.ts  index.js  package.json
bindings/node/__test__/: index.spec.ts
bindings/node/src/: lib.rs
bindings/python/: Cargo.toml  pyproject.toml
bindings/python/python/authy_cli/: __init__.py  __init__.pyi
bindings/python/src/: lib.rs
bindings/python/tests/: test_binding.py
docs/: GUIDE.md  LAUNCH_PLAYBOOK.md
docs/specs/v0.2/: 01-json-output.md  02-env-command.md  03-import-dotenv.md  04-export-env.md  05-non-interactive.md  06-structured-errors.md  07-agent-discovery.md  README.md  todo.md
docs/specs/v0.4/: 01-file-placeholders.md  02-safe-sensitive-split.md  03-rekey-vault.md  README.md  todo.md
docs/specs/v0.6/: 01-api-extensions.md  02-mcp-protocol.md  02a-mcp-tools.md  03-cli-serve.md  04-tui-clipboard.md  05-tui-vault-change.md  README.md  todo.md
docs/specs/v0.7/: 01-import-external.md  02-python-sdk.md  03-typescript-sdk.md  04-go-sdk.md  README.md  todo.md
docs/specs/v0.7.1/: 01-rust-core.md  02-python-binding.md  03-node-binding.md  README.md
npm/authy-cli/: README.md  package.json
npm/authy-cli-darwin-arm64/: package.json
npm/authy-cli-darwin-x64/: package.json
npm/authy-cli-linux-arm64/: package.json
npm/authy-cli-linux-x64/: package.json
npm/authy-cli-win32-x64/: package.json
skills/authy/: SKILL.md
skills/authy/references/: commands.md
src/: api.rs  error.rs  lib.rs  main.rs  types.rs
src/audit/: mod.rs
src/auth/: context.rs  mod.rs
src/cli/: admin.rs  alias.rs  audit.rs  common.rs  config.rs  env.rs  export.rs  get.rs  hook.rs  import.rs  init.rs  json_output.rs  list.rs  mod.rs  policy.rs  project_info.rs  rekey.rs  remove.rs  resolve.rs  rotate.rs  run.rs  serve.rs  session.rs  store.rs
src/cli/import_sources/: hcvault.rs  mod.rs  onepassword.rs  pass.rs  sops.rs
src/config/: mod.rs  project.rs
src/mcp/: mod.rs  tools.rs
src/policy/: mod.rs
src/session/: mod.rs
src/subprocess/: mod.rs
src/tui/: auth.rs  mod.rs  widgets.rs
src/vault/: crypto.rs  mod.rs  secret.rs
tests/: agent_scenario.sh  api_test.rs  mcp_test.rs
tests/integration/: alias_test.rs  audit_test.rs  cli_test.rs  env_test.rs  error_test.rs  export_test.rs  hook_test.rs  import_test.rs  json_test.rs  mod.rs  noninteractive_test.rs  policy_test.rs  project_config_test.rs  rekey_test.rs  resolve_test.rs  run_only_test.rs  run_test.rs  serve_test.rs  session_test.rs  vault_test.rs
web/: App.tsx  README.md  i18n.ts  index.html  metadata.json  package-lock.json  package.json  pnpm-lock.yaml  types.ts  vite.config.ts
web/components/: AgentSkills.tsx  Comparison.tsx  FadeIn.tsx  Features.tsx  Footer.tsx  Hero.tsx  LanguageSwitcher.tsx  Navbar.tsx  QuickStart.tsx  TerminalWindow.tsx
web/locales/: de.json  en.json  es.json  fr.json  ja.json  ko.json  pt.json  zh-TW.json  zh.json
