[project]
name = "authy-cli"
version = "0.7.1"
description = "Native Python binding for the authy secrets manager (Rust-powered)"
requires-python = ">=3.9"
license = "MIT"
keywords = ["secrets", "vault", "agents", "ai", "encryption"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/eric8810/authy"
Documentation = "https://github.com/eric8810/authy/tree/main/bindings/python"
Repository = "https://github.com/eric8810/authy"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "authy_cli._native"
